# WhisperO

./: .gitignore  CLAUDE.md  LICENSE  MEETING_MODE.md  README.md  benchmark.py  pyproject.toml  requirements.txt  setup.ps1
docs/: SERVER_SETUP.md
scripts/: WhisperO.vbs  export_ecapa_onnx.py  install-startup.bat  uninstall-startup.bat
src/whispero/: __main__.py  app.py  audio.py  clipboard.py  config.py  diarize.py  dictionary.py  download.py  meeting.py  sounds.py  transcribe.py
src/whispero/assets/: dictionary.txt
